# dotfiles

./: .laptop_res  .monitor_res  .throwawaygoogleaccountdetails.txt  .zshrc  backupConfigs  filesToBackup.txt  pkglist.txt
.config/: starship.toml
.config/alacritty/: alacritty.yml  alacritty.yml~
.config/fish/: config.fish  config.fish~  fish_variables
.config/kitty/: #kitty.conf#  kitty.conf
.config/nvim/: init.lua  init.vim
.config/qtile/: autostart.sh  config.py  config.py~
.config/qutebrowser/: config.py  config.py~  quickmarks
.config/xmobar/: laptopxmobar  xmobarrc  xmobarrc~
.rocket.d/: history  projectile-bookmarks.eld
.rocket.d/.emacs.d/: .lsp-session-v1  config.el  config.org  config.org~  history  init.el  projectile-bookmarks.eld  recentf  recentf~
.rocket.d/elpa/: vertico-0.12.signed
.rocket.d/load_path/: org-superstar.el
.xmonad/: README.org  README.org~  get-volume.sh  xmonad-x86_64-linux  xmonad.hi  xmonad.hs
4coder_rocket/: config.4coder  fcoder
4coder_rocket/custom/: 4coder_default_bindings.cpp  4coder_default_bindings.cpp~  4coder_default_framework.cpp
4coder_rocket/themes/: theme-doomone.4coder
Applications/dmenu-5.0/: config.h  dmenu  dmenu.c  dmenu_run
Applications/st/: config.def.h  st  (+2 more)
Documents/cCode/learnOpengl/: CMakeLists.txt  Makefile  build.sh  project.4coder
Documents/cCode/learnOpengl/include/: shader.h
Documents/cCode/learnOpengl/include/glad/: glad.c  glad.h
Documents/cCode/learnOpengl/src/: main.c  shader.c
Documents/cCode/learnOpengl/src/shaders/: shader.fs  shader.fs~  shader.vs  shader.vs~
(+79 files in other folders)
